# multi-agent-cli

./: .gitignore  1.12.0  CLAUDE.md  README.md  agents.md  config.json  package-lock.json  package.json  tsconfig.json
backend/: .env  logging.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  code_agent.py  critic_agent.py  domain_agent.py  judge_agent.py  log_agent.py  rebuttal_agent.py  registry.py
backend/app/api/: assets.py  auth.py  benchmark.py  debates.py  governance.py  incidents.py  knowledge.py  monitoring.py  reports.py  router.py  settings.py  ws_debates.py
backend/app/benchmark/: __init__.py  cli.py  fixtures.py  runner.py  scoring.py
backend/app/core/: autogen_client.py  circuit_breaker.py  event_schema.py  json_utils.py  llm_client.py  observability.py  rate_limit.py  security.py  task_queue.py
backend/app/flows/: __init__.py  context.py  debate_flow.py
backend/app/governance/: system_card.py
backend/app/models/: __init__.py  asset.py  debate.py  incident.py  knowledge.py  monitoring.py  tooling.py
backend/app/repositories/: __init__.py  asset_repository.py  debate_repository.py  incident_repository.py  knowledge_repository.py  report_repository.py  tooling_repository.py
backend/app/runtime/: __init__.py  autogen_runtime.py  langgraph_runtime.py  messages.py  session_store.py  task_registry.py
backend/app/runtime_core/: __init__.py  orchestrator.py  work_log.py
backend/app/runtime_ext/: __init__.py  connectors.py  resources.py  (+1 more)
backend/tests/: conftest.py  test_agent_depth_contracts.py  test_agent_factory.py  test_agent_output_normalization.py  test_agent_runner_fatal.py  test_agent_skill_service.py  test_agent_spec.py  test_agent_tool_audit.py  test_agent_tool_context_service.py  test_asset_collection_service.py  test_benchmark_scoring.py  test_config_root_json.py  test_connectors_http_observability.py  test_context_builders.py  test_debate_repository.py  test_debate_service_deployment_profile.py  test_debate_service_effective_conclusion.py  test_debate_service_error_classification.py  test_debate_service_human_review.py  test_deployment_center.py  test_event_dispatcher.py  test_event_schema_stability.py  test_evidence_graph_contract.py  test_execution_invoke_mode.py  test_external_sync_adapters.py  test_feedback_service.py  test_finalization_service.py  test_governance_human_review.py  test_graph_builder.py  test_impact_analysis_agent.py  test_incident_repository.py  test_incident_service.py  test_judge_payload_recovery.py  test_judgment_review_boundaries.py  test_knowledge_service.py  test_langgraph_parallel_dispatch.py  test_langgraph_route_guardrail.py  test_live_llm_regression.py  test_llm_client_logging_refs.py  test_mailbox_flow.py  (+24 more)
(+439 files in other folders)
